Fix App name form index.html file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>React Todo List</title>
+  <title>Hotel Booking App</title>
   <script src="https://use.fontawesome.com/35dba4eb04.js"></script>
 </head>
 
